--- a/student-lectures.html
+++ b/student-lectures.html
@@ -765,7 +765,7 @@
                     duration: "15:30",
                     date: "2023-12-01",
                     progress: 75,
-                    videoId: "dQw4w9WgXcQ", // Example YouTube video ID
+                    videoId: "5Q0FlxcEEIw", // Example YouTube video ID
                     thumbnail: "math"
                 },
                 {
@@ -776,7 +776,7 @@
                     duration: "22:15",
                     date: "2023-12-03",
                     progress: 40,
-                    videoId: "dQw4w9WgXcQ",
+                    videoId: "D1Ymc311XS8",
                     thumbnail: "science"
                 },
                 {
@@ -787,7 +787,7 @@
                     duration: "18:45",
                     date: "2023-12-05",
                     progress: 90,
-                    videoId: "dQw4w9WgXcQ",
+                    videoId: "vHoTJuf4aqA",
                     thumbnail: "english"
                 },
                 {
@@ -798,7 +798,7 @@
                     duration: "25:20",
                     date: "2023-12-07",
                     progress: 20,
-                    videoId: "dQw4w9WgXcQ",
+                    videoId: "G4H1N_yXBiA",
                     thumbnail: "environment"
                 }
             ],
