--- a/student-quiz.html
+++ b/student-quiz.html
@@ -738,7 +738,9 @@
                     <li><i class="fas fa-check"></i> Progress monitoring</li>
                 </ul>
             </div>
-            
+            <div>
+                <iframe src="https://phet.colorado.edu/sims/html/forces-and-motion-basics/latest/forces-and-motion-basics_en.html" width="800" height="600" allowfullscreen></iframe>
+            </div>
             <div class="mode-card" data-mode="flashcards">
                 <div class="mode-icon">
                     <i class="fas fa-layer-group"></i>
@@ -1250,4 +1252,5 @@
         document.addEventListener('DOMContentLoaded', initQuizPage);
     </script>
 </body>
+
 </html>
